--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
 requests==2.9.1
+six==1.6.1
+oauth2client==2.0.0
+httplib2==0.8
+uritemplate==0.6
+pyasn==0.1.7
+pyasn1-modules==0.0.5
+rsa==3.1.4
+simplejson==2.5.0
