--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.9.2
 gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
+google-api-python-client == 1.4.2
 requests==2.9.1
 six==1.6.1
 oauth2client==2.0.0
