--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 dj-database-url==0.4.0
-Django==1.9.2
-gunicorn==19.4.5
+Django==1.9.5
+google-api-python-client==1.5.0
+httplib2==0.9.2
+oauth2client==2.0.1
 psycopg2==2.6.1
-whitenoise==2.0.6
-google-api-python-client == 1.4.2
-requests==2.9.1
-six==1.6.1
-oauth2client==2.0.0
-httplib2==0.8
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+rsa==3.4.2
+simplejson==3.8.2
+six==1.10.0
 uritemplate==0.6
-rsa==3.1.4
-simplejson==2.5.0
+whitenoise==3.0
