--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.9.5
 google-api-python-client==1.5.0
 httplib2==0.9.2
 oauth2client==2.0.1
+gunicorn==19.4.5
 psycopg2==2.6.1
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
